WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47954
Fix MiniBrowser crashes during startup and shutdown
https://bugs.webkit.org/show_bug.cgi?id=47954
Summary
Fix MiniBrowser crashes during startup and shutdown
Anders Carlsson
Reported
2010-10-19 16:36:31 PDT
Fix MiniBrowser crashes during startup and shutdown
Attachments
Patch
(4.00 KB, patch)
2010-10-19 16:38 PDT
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2010-10-19 16:38:25 PDT
Created
attachment 71222
[details]
Patch
Anders Carlsson
Comment 2
2010-10-19 16:42:47 PDT
Committed
r70109
: <
http://trac.webkit.org/changeset/70109
>
Alexey Proskuryakov
Comment 3
2010-10-19 20:41:28 PDT
Does this change mean that main thread will be initialized in UI thread, and then re-initialized in Web thread?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug