Fix MiniBrowser crashes during startup and shutdown https://bugs.webkit.org/show_bug.cgi?id=47954

Reviewed by Sam Weinig.

* UIProcess/WebContext.cpp:
(WebKit::WebContext::sharedProcessContext):
Initialize the main thread.

(WebKit::WebContext::create):
Ditto.

(WebKit::WebContext::WebContext):
Add the language observer here so we know that it will always be set up.

(WebKit::WebContext::ensureWebProcess):
Remove code.

* UIProcess/WebContext.h:

Canonical link: https://commits.webkit.org/60666@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70109 268f45cc-cd09-0410-ab3c-d52691b4dbfc