WebKit2/UIProcess/WebContext.cpp
@@ -61,6 +61,7 @@ static WTF::RefCountedLeakCounter webContextCounter("WebContext");
 
 WebContext* WebContext::sharedProcessContext()
 {
+    WTF::initializeMainThread();
     RunLoop::initializeMainRunLoop();
     static WebContext* context = adoptRef(new WebContext(ProcessModelSharedSecondaryProcess, String())).leakRef();
     return context;
@@ -75,6 +76,7 @@ WebContext* WebContext::sharedThreadContext()
 
 PassRefPtr<WebContext> WebContext::create(const String& injectedBundlePath)
 {
+    WTF::initializeMainThread();
     RunLoop::initializeMainRunLoop();
     return adoptRef(new WebContext(ProcessModelSecondaryProcess, injectedBundlePath));
 }
@@ -88,7 +90,7 @@ WebContext::WebContext(ProcessModel processModel, const String& injectedBundlePa
     , m_shouldPaintNativeControls(true)
 #endif
 {
-    RunLoop::initializeMainRunLoop();
+    addLanguageChangeObserver(this, languageChanged);
 
     m_preferences = WebPreferences::shared();
     m_preferences->addContext(this);
@@ -124,11 +126,17 @@ void WebContext::initializeHistoryClient(const WKContextHistoryClient* client)
     m_process->send(Messages::WebProcess::SetShouldTrackVisitedLinks(m_historyClient.shouldTrackVisitedLinks()), 0);
 }
 
-static void languageChanged(void* context)
+void WebContext::languageChanged(void* context)
 {
-    WebProcessProxy* process = static_cast<WebContext*>(context)->process();
-    if (process)
-        process->send(Messages::WebProcess::LanguageChanged(defaultLanguage()), 0);
+    static_cast<WebContext*>(context)->languageChanged();
+}
+
+void WebContext::languageChanged()
+{
+    if (!hasValidProcess())
+        return;
+
+    m_process->send(Messages::WebProcess::LanguageChanged(defaultLanguage()), 0);
 }
 
 void WebContext::ensureWebProcess()
@@ -159,10 +167,7 @@ void WebContext::ensureWebProcess()
 
     parameters.shouldTrackVisitedLinks = m_historyClient.shouldTrackVisitedLinks();
     parameters.cacheModel = m_cacheModel;
-
     parameters.languageCode = defaultLanguage();
-    addLanguageChangeObserver(this, languageChanged);
-
     parameters.applicationCacheDirectory = applicationCacheDirectory();
 
     copyToVector(m_schemesToRegisterAsEmptyDocument, parameters.urlSchemesRegistererdAsEmptyDocument);
